refactor: 공개 조건을 QueryDSL 조인으로 옮기고, 조건 정의를 한 곳으로 통합